[gd_scene load_steps=5 format=3 uid="uid://bp8uk3phr27iw"]

[ext_resource type="Script" path="res://src/UI/Styles/light_item.gd" id="1_s7tr3"]
[ext_resource type="PackedScene" uid="uid://bnbfjh0vj0q0x" path="res://src/UI/Components/input.tscn" id="2_2w2yo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yyxpe"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_husdi"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="LightItem" type="VBoxContainer"]
offset_right = 200.0
offset_bottom = 155.0
script = ExtResource("1_s7tr3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="RemoveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_yyxpe")
theme_override_styles/focus = SubResource("StyleBoxFlat_husdi")
text = "X"

[node name="WidthContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="WidthContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Width"

[node name="WidthInput" parent="WidthContainer" instance=ExtResource("2_2w2yo")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="HeightContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HeightContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Height"

[node name="HeightInput" parent="HeightContainer" instance=ExtResource("2_2w2yo")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="ShapeContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="ShapeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shape"

[node name="ShapeOptionButton" type="OptionButton" parent="ShapeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="XContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "X"

[node name="XInput" parent="XContainer" instance=ExtResource("2_2w2yo")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="YContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="YContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Y"

[node name="YInput" parent="YContainer" instance=ExtResource("2_2w2yo")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="Color1Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Color1Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color1"

[node name="Color1PickerButton" type="ColorPickerButton" parent="Color1Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Color2Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Color2Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color2"

[node name="Color2PickerButton" type="ColorPickerButton" parent="Color2Container"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="changed" from="WidthContainer/WidthInput" to="." method="_on_width_input_changed"]
[connection signal="changed" from="HeightContainer/HeightInput" to="." method="_on_height_input_changed"]
[connection signal="changed" from="XContainer/XInput" to="." method="_on_x_input_changed"]
[connection signal="changed" from="YContainer/YInput" to="." method="_on_y_input_changed"]
[connection signal="color_changed" from="Color1Container/Color1PickerButton" to="." method="_on_color_1_picker_button_color_changed"]
[connection signal="color_changed" from="Color2Container/Color2PickerButton" to="." method="_on_color_2_picker_button_color_changed"]
